Bug 283784 - when using the 'amount entry widget' in the ledger view, it hangs off the screen
Summary: when using the 'amount entry widget' in the ledger view, it hangs off the screen
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-11 13:21 UTC by harry bennett
Modified: 2018-10-07 06:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3, 5.0.2
Sentry Crash Report:


Attachments
showing widget hanging off my screen (137.55 KB, image/png)
2011-10-11 13:22 UTC, harry bennett
Details

Note You need to log in before you can comment on or make changes to this bug.
Description harry bennett 2011-10-11 13:21:07 UTC
Version:           4.6.0 (using KDE 4.4.5) 
OS:                Linux

when using the 'amount entry widget' in the ledger view, it hangs off the screen

Reproducible: Always

Steps to Reproduce:
open ledger view
select a transaction to edit or start a new transaction for entry
click on the `calculator` icon next to the amount field

Actual Results:  
numeric entry widget hangs off screen leaving the bottom buttons barely clickable

Expected Results:  
all buttons should be fully visible

upon first click, numeric entry widget hangs off screen leaving the bottom buttons barely clickable.

upon second click, widget disappears (as I would expect).

upon 3rd click, the widget is placed where all buttons are fully accessable
Comment 1 harry bennett 2011-10-11 13:22:56 UTC
Created attachment 64411 [details]
showing widget hanging off my screen
Comment 2 Jack 2011-12-12 23:33:25 UTC
What distro and window manager are you using?  In my case (with 4.6.1) the widget always appears so that it is fully visible, with the one exception that if I move the KMM window so it is almost totally off the screen on the left then the widget hangs off the left side of the screen.  Also, does it matter whether your KMM window is maximized or not?
Comment 3 harry bennett 2011-12-13 02:46:06 UTC
I cannot recall from the image that I provided and currently having kernel panics so I cant run KMM.... However, it would be the rarest of occasions that I was not using KMM maximized so I cannot be certain if this problem is present if/when KMM is less than maximized. None the less, it shouldn't ever be falling off the screen, should it?

At the time of creating the bug report I was running:

Version:           4.6.0[compiled for source] (using KDE 4.4.5) 
OS:                Mandriva 10.2
Comment 4 Cristian Oneț 2014-07-28 14:36:22 UTC
Is this still happening?
Comment 5 Ralf Habacker 2018-05-31 18:50:41 UTC
Issue is still present with kmymoney 4.8.1 on editing a transaction for the first click on the calculator button if the right side of KMyMoney window is aligned with the right border of the screen.
Reopening the calculator the second time on editing the same transaction shows the calculator on a different position without clipping.
Comment 6 Ralf Habacker 2018-05-31 18:51:45 UTC
(In reply to Ralf Habacker from comment #5)
Distribution is openSUSE Leap 42.3/KF5 with kwin_x11 and plasmashell
Comment 7 Ralf Habacker 2018-05-31 19:25:56 UTC
The calculator position is set in void kMyMoneyEdit::calculatorOpen(QKeyEvent* k) where on the first setup the size of the calculator frame is (100x30) and on further setup it is (236x176). It looks that the size returned on the first setup is too small and results into the wrong position.
Comment 8 Ralf Habacker 2018-05-31 20:44:39 UTC
Git commit 6a221524755177087fb1dcd110af1bc5f592f61a by Ralf Habacker.
Committed on 31/05/2018 at 20:44.
Pushed by habacker into branch '4.8'.

Fix 'when using the "amount entry widget" in the ledger view, it hangs off the screen'
FIXED-IN:4.8.3

M  +16   -1    kmymoney/widgets/kmymoneyedit.cpp

https://commits.kde.org/kmymoney/6a221524755177087fb1dcd110af1bc5f592f61a
Comment 9 Thomas Baumgart 2018-10-07 06:22:17 UTC
Git commit 84fe5ab427806614c233b60f4d65b187c538741b by Thomas Baumgart.
Committed on 06/10/2018 at 16:47.
Pushed by tbaumgart into branch '5.0'.

Fix placement of calculator

The calculator is placed in the middle of the screen when it is first
opened after transaction edit started. If closed and re-opened in the
same transaction edit session it is placed correctly. This change places
the calculator always in the right position next to the amount edit
widget.

Fix taken from commit 6a221524755177087fb1dcd110af1bc5f592f61a

M  +16   -1    kmymoney/widgets/kmymoneyedit.cpp

https://commits.kde.org/kmymoney/84fe5ab427806614c233b60f4d65b187c538741b