Fix 'when using the "amount entry widget" in the ledger view, it hangs off the screen'

BUG:283784
FIXED-IN:4.8.3